# sofaman

./: Cargo.toml
src/: app_state.rs  data_access.rs  handlers.rs  main.rs  routes.rs
src/accounting/: data.rs  models.rs
src/data/: InMemory.rs  in_memory.rs  sqlite.rs
src/models/: accounting.rs  models.rs
src/pages/: account_list.rs  login.rs  page.rs  workspace.rs
src/tests/: accounting.rs  data_access.rs
src/widgets/: password_input.rs  side_menu.rs
