[package]
name = "sofaman"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.30", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "0.30", features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

sqlite = {version = "0.36.2"}
catppuccin-egui = { version = "5.4.0", default-features = false, features = ["egui30"] }